--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 #database Configuration:
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springJpaThymeleaf3?characterEncoding=latin1&useConfigs=maxPerformance
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/springJpaThymeleaf3?characterEncoding=latin1&useConfigs=maxPerformance
+#spring.datasource.username=root
+#spring.datasource.password=
 #Hibernate Configuration:
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:h2:mem:test-db
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #spring.main.banner-mode=off
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 server.port=8888
